<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
   <LinearLayout 	android:orientation="vertical"
            		android:layout_width="match_parent"
    				android:layout_height="wrap_content">

	<TextView 	android:text="@string/nombresitio"
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"	    
	    />
	<EditText 	android:id="@+id/nombreNuevoSitio"
	        	android:layout_width="match_parent"
    			android:layout_height="wrap_content"	    
	    />
	<TextView	android:text="@string/coordenadas"    			
	    		android:layout_width="match_parent"
    			android:layout_height="wrap_content"	    
	    />
	<EditText   android:id="@+id/coordenadas"
	    		android:layout_width="match_parent"
    			android:layout_height="wrap_content"	    	    
	    />
	
	</LinearLayout>


    <LinearLayout   		  
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
    	<Button android:id="@+id/aceptar"
    	     	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:onClick="aceptar"
    	    	android:text="@string/addsitio"/>
		<Button android:id="@+id/cancelar"
		     	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
				android:onClick="cancelar"            	
    	    	android:text="@string/cancelar"/>
        	
    </LinearLayout>




    
</LinearLayout>